@@ -9,14 +9,57 @@ import java.util.Map;
  * Created by mkaay on 31.05.15.
  */
 class Env {
-    private static Map<String, FunType> signatures;
-    private List<Map<String, TypeCode>> scopes;
-    private static FunType function;
+    private Map<String, FunType> signatures;
+    private LinkedList<Map<String, TypeCode>> scopes;
+    private FunType function;
 
     public Env() {
         scopes = new LinkedList<>();
+        signatures = new HashMap<>();
         function = null;
-        enterScope();
+    }
+
+    @Override
+    public String toString() {
+        StringBuilder s = new StringBuilder();
+
+        s.append("Signatures:");
+        s.append("\n");
+
+        for (Map.Entry<String, FunType> pair : signatures.entrySet()) {
+            s.append(pair.getValue().val);
+            s.append(" ");
+            s.append(pair.getKey());
+            s.append("(");
+            for (TypeCode t : pair.getValue().args) {
+                s.append(t);
+                s.append(",");
+            }
+            s.append(")");
+            s.append("\n");
+        }
+
+        s.append("\n");
+
+        s.append("Context:");
+        s.append("\n");
+
+        for (Map<String, TypeCode> ctx : scopes) {
+            s.append("-start-");
+            s.append("\n");
+
+            for (Map.Entry<String, TypeCode> pair : ctx.entrySet()) {
+                s.append(pair.getValue());
+                s.append(" ");
+                s.append(pair.getKey());
+                s.append("\n");
+            }
+
+            s.append("-end-");
+            s.append("\n");
+        }
+
+        return s.toString();
     }
 
     public TypeCode lookupVar(String x) {
@@ -26,44 +69,46 @@ class Env {
                 return t;
             }
         }
-        throw new TypeException(String.format("Unknown variable %s.", x));
+        throw new TypeException(String.format("Unknown variable %s.", x), this);
     }
 
-    public static FunType lookupFun(String id) {
+    public FunType lookupFun(String id) {
         if (signatures.containsKey(id)) {
             return signatures.get(id);
         }
-        throw new TypeException(String.format("Unknown function %s.", id));
+        throw new TypeException(String.format("Unknown function %s.", id), this);
     }
 
     public void addVar(String x, TypeCode t) {
-        if (scopes.get(0).containsKey(x)) {
-            throw new TypeException(String.format("Variable %s is already declared in this scope.", x));
+        if (scopes.getFirst().containsKey(x)) {
+            throw new TypeException(String.format("Variable %s is already declared in this scope.", x), this);
         }
-        scopes.get(0).put(x, t);
+        scopes.getFirst().put(x, t);
     }
 
     public void addFun(String id, FunType t) {
         if (signatures.containsKey(id)) {
-            throw new TypeException(String.format("Function %s is already declared in this scope.", id));
+            throw new TypeException(String.format("Function %s is already declared in this scope.", id), this);
         }
         signatures.put(id, t);
     }
 
     public void enterScope() {
-        scopes.add(0, new HashMap<String, TypeCode>());
+        scopes.addFirst(new HashMap<String, TypeCode>());
     }
 
     public void leaveScope() {
-        scopes.remove(0);
+        scopes.removeFirst();
     }
 
     public void enterFunction(String id) {
         function = signatures.get(id);
+        enterScope();
     }
 
     public void leaveFunction() {
         function = null;
+        leaveScope();
     }
 
     public TypeCode getReturnType() {
